samples/_failures_safe/1761371438_450df4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c92f5f2a.c: In function ‘main’:
./samples/SAFE/__tmp_c92f5f2a.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\n");
      |     ^~~~~~
